--- a/src/App.scss
+++ b/src/App.scss
@@ -1,9 +1,13 @@
 * {
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-family: sans-serif;
     // letter-spacing: 1.3px;
     // Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif
     h1,
     p {
         margin: 0;
+    }
+    a {
+        text-decoration: none;
+        color: inherit;
     }
 }
