--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -3,11 +3,10 @@ header {
     @include flex-box(center, center);
     position: fixed;
     box-sizing: border-box;
-    top: 0;
-    left: 3%;
+    top: 1%;
     z-index: 999;
     height: 56px;
-    width: 94%;
+    width: 100%;
     // background-color: rgba(255, 255, 255, 255);
     background-color: transparent;
     // backdrop-filter: blur(100px);
@@ -30,9 +29,7 @@ header {
     .page-type {
         cursor: pointer;
         a {
-            font-size: 20px;
-            font-weight: 500;
-            letter-spacing: 1.3px;
+            @include font-style(20px, 500, normal, 1.3px, $color-dark-one);
         }
     }
 }
