--- a/src/pages/Home/Home.scss
+++ b/src/pages/Home/Home.scss
@@ -20,7 +20,7 @@
         // top: -56px;
     }
     .welcome-section {
-        background-color: #e7e6fc; //
+        background-color: #89c4ff; //#e7e6fc; //
         z-index: 11;
         @include flex-box(center, center);
     }
