--- a/src/components/About/About.scss
+++ b/src/components/About/About.scss
@@ -2,6 +2,7 @@
     .profile-image-container {
         width: 400px;
         height: 400px;
+        background-color: yellow;
         img {
             width: 100%;
         }
