--- a/src/components/About/About.scss
+++ b/src/components/About/About.scss
@@ -1,10 +1,19 @@
 .about-component {
     .profile-image-container {
-        width: 400px;
-        height: 400px;
-        background-color: yellow;
+        width: 500px;
+        height: 500px;
+        overflow: hidden;
+        border: 1px solid;
+        background-image: url("./../../assets/profile_portfolio.PNG");
+        border-radius: 50%;
+        background-size: auto 39em;
+        background-repeat: no-repeat;
+        background-position: center;
+        transform: rotate(10deg);
         img {
             width: 100%;
+            height: 100%;
+            // background-color: yellow;
         }
     }
 }
