[17] : PDF Viewer Package Removed.

--- a/src/components/About/About.scss
+++ b/src/components/About/About.scss
@@ -16,4 +16,11 @@
             // background-color: yellow;
         }
     }
+    .pdf-viewer-container {
+        position: fixed;
+        top: 0;
+        width: 100px;
+        height: 100vh;
+        background-color: red;
+    }
 }
