--- a/src/pages/Home/Home.scss
+++ b/src/pages/Home/Home.scss
@@ -10,6 +10,28 @@
         box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px,
             rgba(0, 0, 0, 0.23) 0px 3px 6px;
     }
+    .pdf-viewer-container {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100vh;
+        background-color: #fff;
+        z-index: 999;
+        .close-button {
+            background-color: Yellow;
+            color: #333;
+            border: 2px solid #333;
+            border-radius: 4px;
+            height: 40px;
+            width: 200px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            cursor: pointer;
+            margin: 8px auto;
+        }
+    }
     .welcome-section {
         background-color: #edf2fb; // #89c4ff; //#e7e6fc; //
         z-index: 11;
