--- a/src/pages/Home/Home.scss
+++ b/src/pages/Home/Home.scss
@@ -6,7 +6,7 @@
         bottom: 0;
         // @include flex-box(center, center);
         box-sizing: border-box;
-        padding: 64px;
+        padding: 64px 32px;
         box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px,
             rgba(0, 0, 0, 0.23) 0px 3px 6px;
     }
@@ -35,7 +35,7 @@
     .welcome-section {
         background-color: #edf2fb; // #89c4ff; //#e7e6fc; //
         z-index: 11;
-        @include flex-box(center, center);
+        @include flex-box(center, center, row);
     }
     .about-section {
         background-color: #e2eafc;
