--- a/src/components/About/About.scss
+++ b/src/components/About/About.scss
@@ -1,4 +1,18 @@
+@import "./../../Shared/Scss-snippets.scss";
 .about-component {
+    .intro-section {
+        @include flex-box(center, normal, row);
+        column-gap: 64px;
+    }
+    .intro-text-links {
+        @include flex-box(normal, normal, column);
+        row-gap: 16px;
+    }
+    .text {
+        @include flex-box(normal, normal, column);
+        @include font-style(16px, normal, 32px, normal, $color-dark-one);
+        row-gap: 16px;
+    }
     .profile-image-container {
         width: 500px;
         height: 500px;
@@ -10,6 +24,7 @@
         background-repeat: no-repeat;
         background-position: center;
         transform: rotate(10deg);
+        flex-shrink: 0;
         img {
             width: 100%;
             height: 100%;
