--- a/src/pages/Home/Home.scss
+++ b/src/pages/Home/Home.scss
@@ -6,7 +6,7 @@
         bottom: 0;
         // @include flex-box(center, center);
         box-sizing: border-box;
-        padding: 64px 32px;
+        padding: 96px 32px 32px 32px;
         box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px,
             rgba(0, 0, 0, 0.23) 0px 3px 6px;
     }
@@ -33,12 +33,12 @@
         }
     }
     .welcome-section {
-        background-color: #edf2fb; // #89c4ff; //#e7e6fc; //
+        background-color: #fff; // #89c4ff; //#e7e6fc; //
         z-index: 11;
         @include flex-box(center, center, row);
     }
     .about-section {
-        background-color: #e2eafc;
+        background-color: #fff;
         z-index: 9;
         /**
             Shortlisted colours:
@@ -49,19 +49,19 @@
         */
     }
     .project-section {
-        background-color: #d7e3fc;
+        background-color: #fff;
         z-index: 7;
     }
     .education-section {
-        background-color: #ccdbfd;
+        background-color: #fff;
         z-index: 5;
     }
     .contact-section {
-        background-color: #c1d3fe;
+        background-color: #fff;
         z-index: 3;
     }
     .outro-section {
-        background-color: #b6ccfe;
+        background-color: #fff;
         z-index: 1;
     }
 }
