--- a/src/App.scss
+++ b/src/App.scss
@@ -1,5 +1,5 @@
 * {
-    font-family: sans-serif;
+    font-family: "JetBrains Mono", monospace;
     // letter-spacing: 1.3px;
     // Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif
     h1,
