--- a/src/components/About/About.scss
+++ b/src/components/About/About.scss
@@ -1,17 +1,96 @@
 @import "./../../Shared/Scss-snippets.scss";
 .about-component {
+    @include flex-box(center, center, column);
+    row-gap: 64px;
     .intro-section {
         @include flex-box(center, normal, row);
         column-gap: 64px;
     }
     .intro-text-links {
         @include flex-box(normal, normal, column);
-        row-gap: 16px;
+        row-gap: 32px;
     }
     .text {
         @include flex-box(normal, normal, column);
         @include font-style(16px, normal, 32px, normal, $color-dark-one);
         row-gap: 16px;
+    }
+    .links {
+        @include flex-box(normal, center, row);
+        column-gap: 24px;
+        button {
+            align-items: center;
+            appearance: none;
+            background-color: #fcfcfd;
+            border-radius: 4px;
+            border-width: 0;
+            box-shadow: rgba(45, 35, 66, 0.4) 0 2px 4px,
+                rgba(45, 35, 66, 0.3) 0 7px 13px -3px, #d6d6e7 0 -3px 0 inset;
+            box-sizing: border-box;
+            color: #36395a;
+            cursor: pointer;
+            display: inline-flex;
+            font-family: "JetBrains Mono", monospace;
+            height: 48px;
+            width: 160px;
+            justify-content: center;
+            line-height: 1;
+            list-style: none;
+            overflow: hidden;
+            padding-left: 16px;
+            padding-right: 16px;
+            position: relative;
+            text-align: left;
+            text-decoration: none;
+            transition: box-shadow 0.15s, transform 0.15s;
+            user-select: none;
+            -webkit-user-select: none;
+            touch-action: manipulation;
+            white-space: nowrap;
+            will-change: box-shadow, transform;
+            font-size: 16px;
+        }
+        button:focus {
+            box-shadow: #d6d6e7 0 0 0 1.5px inset,
+                rgba(45, 35, 66, 0.4) 0 2px 4px,
+                rgba(45, 35, 66, 0.3) 0 7px 13px -3px, #d6d6e7 0 -3px 0 inset;
+        }
+        button:hover {
+            box-shadow: rgba(45, 35, 66, 0.4) 0 4px 8px,
+                rgba(45, 35, 66, 0.3) 0 7px 13px -3px, #d6d6e7 0 -3px 0 inset;
+            transform: translateY(-2px);
+        }
+        button:active {
+            box-shadow: #d6d6e7 0 3px 7px inset;
+            transform: translateY(2px);
+        }
+    }
+    .skills-section {
+        @include flex-box(center, center, row);
+        column-gap: 16px;
+        .skill {
+            height: 120px;
+            width: 120px;
+            background: #ffffff;
+            border: 0 solid #e2e8f0;
+            box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1),
+                0 2px 4px -1px rgba(0, 0, 0, 0.06);
+            box-sizing: border-box;
+            border-radius: 8px;
+            padding: 16px;
+            img {
+                width: 100%;
+                height: 100%;
+            }
+        }
+        .skill {
+            background: #ffffff;
+            border: 0 solid #e2e8f0;
+            box-shadow: 0px 0px 1px 1px rgba(0, 0, 0, 0.1),
+                0px 0px 2px 2px rgba(0, 0, 0, 0.06);
+            box-sizing: border-box;
+            border-radius: 8px;
+        }
     }
     .profile-image-container {
         width: 500px;
