--- a/src/components/About/About.scss
+++ b/src/components/About/About.scss
@@ -96,7 +96,7 @@
         width: 500px;
         height: 500px;
         overflow: hidden;
-        border: 0.5px solid;
+        // border: 0.5px solid;
         background-image: url("./../../assets/profile_portfolio.PNG");
         border-radius: 50%;
         background-size: auto 39em;
@@ -104,6 +104,9 @@
         background-position: center;
         transform: rotate(10deg);
         flex-shrink: 0;
+        box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.1),
+            0px 0px 5px -2px rgba(0, 0, 0);
+        background-color: #eff8ff;
         img {
             width: 100%;
             height: 100%;
