--- a/src/pages/Home/Home.scss
+++ b/src/pages/Home/Home.scss
@@ -1,14 +1,15 @@
 @import "./../../Shared/Scss-snippets.scss";
 .home-component {
     .base {
-        height: 100vh;
-        position: sticky;
-        bottom: 0;
+        // height: 100vh;
+        // position: sticky;
+        // bottom: 0;
         // @include flex-box(center, center);
-        box-sizing: border-box;
-        padding: 96px 32px 32px 32px;
-        box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px,
-            rgba(0, 0, 0, 0.23) 0px 3px 6px;
+        // box-sizing: border-box;
+        // padding: 96px 32px 32px 32px;
+        // box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px,
+        //     rgba(0, 0, 0, 0.23) 0px 3px 6px;
+        padding: 32px 0;
     }
     .pdf-viewer-container {
         position: fixed;
@@ -34,12 +35,12 @@
     }
     .welcome-section {
         background-color: #fff; // #89c4ff; //#e7e6fc; //
-        z-index: 11;
+        // z-index: 11;
         @include flex-box(center, center, row);
     }
     .about-section {
         background-color: #fff;
-        z-index: 9;
+        // z-index: 9;
         /**
             Shortlisted colours:
             
@@ -50,18 +51,18 @@
     }
     .project-section {
         background-color: #fff;
-        z-index: 7;
+        // z-index: 7;
     }
     .education-section {
         background-color: #fff;
-        z-index: 5;
+        // z-index: 5;
     }
     .contact-section {
         background-color: #fff;
-        z-index: 3;
+        // z-index: 3;
     }
     .outro-section {
         background-color: #fff;
-        z-index: 1;
+        // z-index: 1;
     }
 }
