--- a/src/components/Projects/Projects.scss
+++ b/src/components/Projects/Projects.scss
@@ -1,24 +1,46 @@
 @import "./../../shared/Scss-snippets.scss";
 .projects-component {
-    // @include flex-box(normal, normal, column);
+    @include flex-box(normal, normal, column);
     row-gap: 32px;
     .project-info-container {
         @include flex-box(center, normal, column);
         column-gap: 32px;
+        h2 {
+            color: #4062fa;
+        }
     }
 
     .project {
         @include flex-box(normal, normal, row);
+        background-color: #f3fdf9;
+        box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.1),
+            0px 0px 5px -2px rgb(0, 0, 0);
+        column-gap: 32px;
+        .info-text {
+            @include flex-box(center, normal, row);
+            ul {
+                @include flex-box(center, normal, column);
+                row-gap: 16px;
+                line-height: 32px;
+                li {
+                    align-self: self-start;
+                }
+                :nth-child(1) {
+                    font-weight: 600;
+                }
+            }
+        }
     }
     .project-info-container:nth-of-type(2n) {
         .project {
-            flex-direction: row-reverse !important;
+            flex-direction: row-reverse;
+            background-color: #f9edf9;
         }
     }
     .image-container {
         max-width: 600px;
-        box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.1),
-            0px 0px 5px -2px rgb(0, 0, 0);
+        // box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.1),
+        //     0px 0px 5px -2px rgb(0, 0, 0);
         border-radius: 4px;
         img {
             width: 100%;
