--- a/src/components/Projects/Projects.scss
+++ b/src/components/Projects/Projects.scss
@@ -38,7 +38,9 @@
         }
     }
     .image-container {
-        max-width: 600px;
+        min-width: 600px;
+        width: 600px;
+        height: 340px;
         // box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.1),
         //     0px 0px 5px -2px rgb(0, 0, 0);
         border-radius: 4px;
