--- a/src/components/Projects/Projects.scss
+++ b/src/components/Projects/Projects.scss
@@ -7,6 +7,7 @@
         column-gap: 32px;
         h2 {
             color: #4062fa;
+            margin: 0 0 16px 0;
         }
     }
 
@@ -43,7 +44,8 @@
     .image-container {
         min-width: 600px;
         width: 600px;
-        height: 340px;
+        height: auto;
+        max-height: 390px;
         // box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.1),
         //     0px 0px 5px -2px rgb(0, 0, 0);
         border-radius: 4px;
@@ -100,5 +102,17 @@
 
 @media (width <= 640px) {
     .projects-component {
+        row-gap: 24px;
+        .project {
+            padding: 8px;
+        }
+        .project-info-container:nth-of-type(2n) {
+            .project {
+                padding: 8px;
+            }
+        }
+        .image-container {
+            height: auto;
+        }
     }
 }
