[31] : About section responsiveness done.

--- a/src/Shared/Scss-snippets.scss
+++ b/src/Shared/Scss-snippets.scss
@@ -1,4 +1,5 @@
 $color-dark-one: #2f2342;
+$color-dark-two: #4062fa;
 
 @mixin flex-box($alignItem, $justifyContent, $flexDirection) {
     display: flex;
