--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -34,3 +34,11 @@ header {
         }
     }
 }
+
+@media (width <= 640px) {
+    header {
+        .page-navigator {
+            display: none;
+        }
+    }
+}
