--- a/src/pages/Home/Home.scss
+++ b/src/pages/Home/Home.scss
@@ -1,5 +1,6 @@
 @import "./../../Shared/Scss-snippets.scss";
 .home-component {
+    padding: 0 0 56px;
     .base {
         // height: 100vh;
         // position: sticky;
