--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -27,6 +27,10 @@ header {
         font-size: 14px;
         text-transform: uppercase;
     }
+    .breadcrumb,
+    .breadcrumb-menu {
+        display: none;
+    }
     .page-type {
         cursor: pointer;
         a {
@@ -37,8 +41,64 @@ header {
 
 @media (width <= 640px) {
     header {
+        justify-content: flex-end;
+        padding: 0;
         .page-navigator {
             display: none;
+        }
+        .breadcrumb {
+            display: block;
+            width: 35px;
+            height: 30px;
+            padding: 0 5px;
+            box-sizing: border-box;
+            @include flex-box(center, center, column);
+            row-gap: 4px;
+            box-shadow: 0px 0px 1.5px 0 rgba(0, 0, 0, 0.9),
+                0px 0px 0px 10px rgba(0, 0, 0, 0.01);
+            border-radius: 4px;
+            cursor: pointer;
+            hr {
+                width: 100%;
+                border: 1px solid #666;
+                margin: 0;
+            }
+        }
+    }
+    .breadcrumb-menu {
+        height: 100vh;
+        width: 60%;
+        background-color: #fff;
+        position: fixed;
+        top: 0;
+        right: 0;
+        z-index: 999;
+        box-shadow: 0px 0px 1px 0px rgba(0, 0, 0, 0.2),
+            0px 0px 2px 2px rgba(0, 0, 0, 0.07);
+        .close {
+            width: fit-content;
+            font-size: 32px;
+            color: #666;
+            cursor: pointer;
+            position: absolute;
+            top: 16px;
+            right: 24px;
+        }
+        .options {
+            @include flex-box(normal, normal, column);
+            // row-gap: 24px;
+            color: $color-dark-one;
+            position: absolute;
+            top: 5em;
+            // left: 1em;
+            width: 100%;
+            p {
+                cursor: pointer;
+                padding: 16px;
+            }
+            p:hover {
+                background-color: #f2e4e4;
+            }
         }
     }
 }
