--- a/src/App.scss
+++ b/src/App.scss
@@ -1,13 +1,13 @@
 * {
-    font-family: "JetBrains Mono", monospace;
+    font-family: "poppins";
     // letter-spacing: 1.3px;
     // Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif
     h1,
     p {
-        margin: 0;
+        margin: 0 !important;
     }
     a {
-        text-decoration: none;
+        text-decoration: none !important;
         color: inherit;
     }
 }
