--- a/src/components/About/About.scss
+++ b/src/components/About/About.scss
@@ -37,7 +37,7 @@
             color: #36395a;
             cursor: pointer;
             display: inline-flex;
-            font-family: "JetBrains Mono", monospace;
+            // font-family: "JetBrains Mono", monospace;
             height: 48px;
             width: 160px;
             justify-content: center;
@@ -114,9 +114,9 @@
                 p {
                     transform: rotate(270deg);
                     position: relative;
-                    bottom: -34px;
-                    left: 26px;
-                    font-size: 11.5px;
+                    bottom: -32px;
+                    left: 28px;
+                    font-size: 11px;
                     height: -moz-fit-content;
                     height: fit-content;
                     color: #fff;
