--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -58,6 +58,7 @@ header {
                 0px 0px 0px 10px rgba(0, 0, 0, 0.01);
             border-radius: 4px;
             cursor: pointer;
+            margin: 0;
             hr {
                 width: 100%;
                 border: 1px solid #666;
