--- a/src/components/Projects/Projects.scss
+++ b/src/components/Projects/Projects.scss
@@ -5,9 +5,14 @@
     .project-info-container {
         @include flex-box(center, normal, column);
         column-gap: 32px;
+        a {
+            text-decoration: none;
+        }
         h2 {
-            color: $color-dark-two;
+            color: $color-dark-two !important;
             margin: 0 0 16px 0;
+            font-weight: 600;
+            font-size: 24px;
         }
     }
 
@@ -17,6 +22,7 @@
         box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.1),
             0px 0px 5px -2px rgb(0, 0, 0);
         // column-gap: 32px;
+        border-radius: 8px;
         .info-text {
             @include flex-box(center, normal, row);
             padding-right: 24px;
@@ -52,10 +58,10 @@
         max-height: 390px;
         // box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.1),
         //     0px 0px 5px -2px rgb(0, 0, 0);
-        border-radius: 4px;
         img {
             width: 100%;
             height: 100%;
+            border-radius: 8px;
         }
     }
     .more-project {
