--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -32,3 +32,15 @@ footer {
         }
     }
 }
+@media (width <= 640px) {
+    footer {
+        height: 56px;
+        .logo-section {
+            margin: auto;
+        }
+        .logo-container {
+            width: 40px;
+            height: 40px;
+        }
+    }
+}
