--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -93,7 +93,7 @@ header {
             top: 5em;
             // left: 1em;
             width: 100%;
-            p {
+            a {
                 cursor: pointer;
                 padding: 16px;
             }
