--- a/src/App.scss
+++ b/src/App.scss
@@ -8,7 +8,7 @@
     }
     a {
         text-decoration: none !important;
-        color: inherit;
+        color: inherit !important;
     }
 }
 .app-component {
