--- a/src/components/About/About.scss
+++ b/src/components/About/About.scss
@@ -22,6 +22,10 @@
             font-weight: 600;
             letter-spacing: 1.2px;
         }
+        h2:hover {
+            text-decoration: underline;
+            text-decoration-thickness: from-font;
+        }
         p {
             font-weight: 500;
             font-size: 20px;
@@ -130,7 +134,7 @@
                     transform: rotate(270deg);
                     position: relative;
                     bottom: -32px;
-                    left: 28px;
+                    left: 29px;
                     font-size: 11px;
                     height: -moz-fit-content;
                     height: fit-content;
